# finitii

./: .env.example  .gitignore  LAUNCH_READINESS_REPORT.md  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: auth.py  errors.py  middleware.py  rate_limit.py
backend/app/derived_views/: __init__.py  money_graph.py
backend/app/models/: __init__.py  account.py  audit.py  base.py  category.py  cheat_code.py  coach_memory.py  connection.py  consent.py  forecast.py  goal.py  learn.py  merchant.py  onboarding.py  practice.py  recurring.py  session.py  transaction.py  user.py  vault.py
backend/app/routers/: accounts.py  auth.py  bills.py  cheat_codes.py  coach.py  consent.py  forecast.py  goals.py  learn.py  money_graph.py  onboarding.py  practice.py  recurring.py  transactions.py  user.py  vault.py
backend/app/schemas/: account.py  audit.py  bill.py  category.py  cheat_code.py  coach.py  consent.py  forecast.py  goal.py  learn.py  onboarding.py  practice.py  recurring.py  (+3 more)
backend/tests/: conftest.py  test_agent_personas.py  test_health.py  test_middleware.py  test_phase0_integration.py  test_phase1_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_phase6_integration.py  test_phase7_integration.py  test_phase8_integration.py  test_phase9_coach_redteam.py  test_phase9_e2e_trust.py  test_phase9_security_hygiene.py  test_phase9_ship_checklist.py
(+103 files in other folders)
